# cpsc539b

./: .gitignore  Cargo.toml  Dockerfile  README.md
src/: anf.rs  ctxt.rs  defs.rs  error_reporting.rs  fmt.rs  main.rs  semi_persistent.rs  simpl.rs  tenv.rs  ty_check.rs
src/simpl/: defs.rs  main.rs  ty_check.rs
src/util/: fmt.rs  mod.rs  semi_persistent.rs
