[package]
name = "project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8.2"
serde = {features = ["derive"], version = "1.0.147"}
smallstr = {features = ["serde", "union"], version = "0.3.0"}
serde-lexpr = "0.1.2"
lexpr = "0.2.6"